# linafish

./: .gitignore  AGENTS.md  BUILD_NOTES_digest_gap_2026-04-18.md  BUILD_NOTES_endpoint_audit_2026-04-23.md  BUILD_NOTES_fish_instruments_2026-04-20.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
docs/: absorb-seed.md  afferent-school.md  ai-usability.md  architecture.md  build-journal.md  build-queue.md  configuration.md  design-notes.md  episodic-recall.md  fish-corpus-guide.md  how-it-works.md  living-vocabulary-plan-2026-05-20.md  meditate.md  next-build.md  owners-manual.md  privacy.md  private-language-architecture.md  qlp-engine-v04.md  rcp-notes-and-fish.md  research.md  strategy-2026-03-31.md  testing.md  the-fish-speaks-first.md  the-mesh.md  v05-reality-engine.md  v12-seeds.md  vision.md  worked-example.md
docs/ideas/: gpt-backed-linafish.md
docs/native-glyph-2.0/: 00_FOUNDATION.md  00b_THE_ENGINE.md  01_REFERENCES.md  02_PLAN.md  03_BUILD_FISH.md
docs/native-glyph-2.0/canon/: QLP_Canonical_Framework_Grammar.extracted.md  QUANTUM_Advanced_AI-Human_Communication_Framework.extracted.md  README.md  bootstrap_codebook.md
docs/session-instrument/: BUILD-PREP.md  README.md  meditate.md  open-close-delta.md
examples/archaeology/: README.md  run_experiment.py
exp/episodic-recall/: README.md  SPEC_v0.2_cal_2026-06-10.md
linafish/: __init__.py  __main__.py  _dedup_helpers.py  _mind_integration.py  absorb.py  afferent.py  assessment.py  classifier.py  codebook.py  compress.py  converse.py  crystallizer.py  crystallizer_v3.py  daemon.py  daily.py  deep.py  eat.py  emergence.py  engine.py  episodic.py  feedback.py  formation_gardener.py  formations.py  formations_v3.py  fusion.py  glyph_evolution.py  guppy.py  http_server.py  ingest.py  ingest_v3.py  init.py  keeper.py  listener.py  locks.py  metabolism.py  metrics.py  moment.py  parser.py  quantum_operations.py  quickstart.py  (+5 more)
linafish/bridges/: __init__.py  notion.py
linafish/data/: AGENTS.md  ai_primer.md  morning_briefing.md  overnight_research_notes.md
recipes/notify-coherence/: INTEGRATION.md  README.md  notify_coherence.py
scripts/: bench_addressed_eat.py  migrate_to_addressed_formations.py
tests/: incremental_growth_test.py  lab_results.json  persona_lab.py  reeat_cycle_test.py  test_addressed_eat.py  test_afferent_cli.py  test_bridge_notion.py  test_chaincode_marriage.py  test_classifier.py  test_daemon_commit_policy.py  test_daily.py  test_dedup_helpers.py  test_eat_latency.py  test_episodic_api.py  test_episodic_recall.py  test_formation_address.py  test_formation_gardener.py  test_git_run_encoding.py  test_http_threaded.py  test_ingest.py  test_init.py  test_instruments.py  test_keeper.py  test_living_vocab.py  test_living_vocab_diminish.py  test_locks.py  test_meditate.py  test_msg_endpoints.py  test_op_level_coinage.py  test_origin_crystal_zero.py  test_recouple_in_place.py  test_resolve_state_dir.py  test_style.py  test_v121_fixes.py
tests/archive/: README.md  test_codebook_v1.py
tmp/: marriage_phase2_ab_harness.py  marriage_phase2_ab_results.md
