[build-system]
requires = ["setuptools>=68.0,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "linafish"
version = "0.4.6"
description = "Make any AI know you. A cognitive overlay that sits between you and any AI."
requires-python = ">=3.8"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Scott Dill", email = "scott@garytcolorado.com"}]
keywords = ["ai", "agent", "codebook", "compression", "mcp", "openclaw", "personalization", "rcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/sdill1973a/linafish"
Documentation = "https://github.com/sdill1973a/linafish"
Repository = "https://github.com/sdill1973a/linafish"

[project.optional-dependencies]
fast = ["numpy>=1.21"]
pdf = ["PyMuPDF"]
docx = ["python-docx"]
http = ["requests"]
all = ["numpy>=1.21", "PyMuPDF", "python-docx", "requests"]

[project.scripts]
linafish = "linafish.__main__:main"

[tool.setuptools.packages.find]
include = ["linafish*"]

[tool.setuptools.package-data]
linafish = ["data/*.md"]
